Test(ResultCalculateTest) : 상금 계산을 정확하게 수행하는지 테스트 추가.